# zcpm

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  functions.cmake  status.md  wordstar.keys
bdos/: README.txt  bdos.lab  bdos.z80
builder/: CMakeLists.txt  builder.cpp  builder.hpp
console/: CMakeLists.txt  cursesconsole.cpp  cursesconsole.hpp  iconsole.hpp  plain.cpp  plainconsole.cpp  plainconsole.hpp  televideo.cpp  televideo.hpp  vt100.cpp  vt100.hpp
core/: CMakeLists.txt  bdos.cpp  bdos.hpp  bios.cpp  bios.hpp  config.hpp  debugaction.cpp  debugaction.hpp  disk.cpp  disk.hpp  fcb.cpp  fcb.hpp  handlers.hpp  hardware.cpp  hardware.hpp  idebuggable.hpp  imemory.hpp  instructions.hpp  processor.cpp  processor.hpp  processordata.hpp  registers.hpp  symboltable.cpp  symboltable.hpp  system.cpp  system.hpp
debugger/: CMakeLists.txt  main.cpp  writer.cpp  writer.hpp
runner/: CMakeLists.txt  main.cpp
terminal/: CMakeLists.txt  iterminal.hpp  keymap.cpp  keymap.hpp  plain.cpp  plain.hpp  televideo.cpp  televideo.hpp  terminal.cpp  terminal.hpp  type.cpp  type.hpp  vt100.cpp  vt100.hpp
tests/: CMakeLists.txt  test_processor.cpp
